# utils_python

./: .gitignore  README.md  cmd.txt  pyproject.toml  requirements.txt
notebook/: calib_pinhole_camera.ipynb  camera_calibration.ipynb  test_.ipynb  vis.ipynb
notebooks/: calibr_C50A.ipynb  camera_calibration.ipynb  get_real_data.py
script/: a.py  b.py  b_1.py  c.py  camera.py  d.py  file.py  g_a.py  g_april.py  g_aruco_gridboard.py  g_charuco_board.py  pcd_to_bin_converter.py  ros.py  rosbag.py  sync_lidar_image.py  test.py
src/: camera_calibration.py  file_processor.py  rosbag_processor.py  video_processor.py
src/camera_calib/: calibrator.py  main.py
src/camera_calib/camera_models/: pinhole.py
src/camera_calib/patterns/: chessboard.py
src/lovely_utils/: cli.py  file_processor.py
src/lovely_utils/camera/: calib_pinhole_camera.py  cli.py
src/lovely_utils/camera/calibration/: calibration_cli.py
src/lovely_utils/camera/calibrator/: base_calibrator.py  fisheye_calibrator.py  pinhole_calibrator.py
src/lovely_utils/camera/detector/: base_detector.py  (+1 more)
src/lovely_utils/file/: file_processor.py  rename.py
src/lovely_utils/image/: video_processor.py
src/lovely_utils/ros/: __init__.py  message_handler.py  message_saver.py  rosbag_reader.py  rosbag_reader_cli.py  type.py
src/util_ros/: __init__.py  message_handler.py  message_saver.py  rosbag_reader.py
test/camera/: util.py
test/camera/calibration/: test_aruco_gridboard.py
test/camera/calibrator/: test_fisheye_calibrator.py  test_pinhole_calibrator.py
test/camera/detector/: test_chessboard_detector.py
test/lovely_utils/ros/: test_message_handler.py  test_message_saver.py  test_rosbag_reader.py  util.py
test/ros/: test_message_handler.py  test_message_saver.py  test_rosbag_reader.py  util.py
test/util_ros/: test_message_handler.py  test_message_saver.py  test_rosbag_reader.py  util.py
(+8 files in other folders)
