[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lovely_utils"
version = "0.1.0"
authors = [{name = "Your Name", email = "your.email@example.com"}]
description = "A short description of your package"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
lovely_utils = "lovely_utils.cli:main"
