[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lovely_utils"
version = "0.1.0"
authors = [{name = "Your Name", email = "your.email@example.com"}]
description = "A short description of your package"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy==2.2.6",
    "opencv-python-headless==4.12.0.88",
    "reportlab==4.4.10",
    "typer==0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
lovely_utils = "lovely_utils.cli:main"
